--- a/src/client/client.css
+++ b/src/client/client.css
@@ -4,11 +4,53 @@ Thanos App Containers/CSS
 
 .thanosContainer {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: #fff;
+  background: #e2e2e2;
+}
+.thanosContainerHeader {
+  width: 100%;
+  height: 72px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #232f3e;
+}
+.thanosContainerHeaderInner {
+  width: 100%;
+  max-width: 1024px;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.thanosContainerHeaderLogo {
+  width: 100%;
+  text-align: left;
+  margin-left: 20px;
+  color: #fff;
+  font-size: 24px;
+  font-weight: 600;
+}
+.thanosContainerHeaderFeatures {
+  width: 100%;
+  text-align: right;
+  margin-right: 20px;
+  color: #fff;
+}
+.thanosContainerVideo {
+  max-width: 1024px;
+  margin: 50px 0px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .thanosContainerInner {
   width: 100%;
@@ -16,13 +58,34 @@ Thanos App Containers/CSS
   max-width: 1024px;
   display: flex;
 }
+.thanosContainerInformation {
+  width: calc(100% - 350px);
+  min-width: 674px;
+  height: 850px;
+  margin-bottom: 50px;
+  background-color: #fff;
+}
+.thanosContainerLocation {
+  width: 100%;
+  text-align: left;
+  font-weight: 400;
+  font-size: 18px;
+  color: #888;
+}
+.thanosContainerCreator {
+  width: 100%;
+  text-align: right;
+  font-weight: 400;
+  font-size: 18px;
+  color: #888;
+}
 .thanosContainerSidebar {
-  display: fixed;
   min-width: 350px;
-  height: 100%;
+  height: 850px;
+  margin-bottom: 50px;
   background: #f2f7f7
 }
-.thanosContainerHeader {
+.thanosContainerSecondaryHeader {
   margin: 30px;
   display: flex;
   align-items: center;
@@ -45,23 +108,4 @@ Thanos App Containers/CSS
 .thanosContainerDocumentationContainer {
   width: 100%;
   margin-bottom: 0px;
-}
-.thanosContainerInformation {
-  width: calc(100% - 350px);
-  min-width: 674px;
-  height: 100%;
-}
-.thanosContainerLocation {
-  width: 100%;
-  text-align: left;
-  font-weight: 400;
-  font-size: 18px;
-  color: #888;
-}
-.thanosContainerCreator {
-  width: 100%;
-  text-align: right;
-  font-weight: 400;
-  font-size: 18px;
-  color: #888;
 }
