--- a/src/client/components/Entry/index.css
+++ b/src/client/components/Entry/index.css
@@ -5,15 +5,22 @@ Entry Containers/CSS
 .entryContainer {
   width: calc(100% - 70px);
   display: flex;
-  padding: 0px 30px 0px 40px;
-  margin-bottom: 10px;
+  padding: 5px 30px 5px 40px;
+}
+.entryContainer:hover {
+  color: #fff;
+  background-color: #232f3e;
+  padding: 5px 30px 5px 40px;
+  transition: 0.3s ease-in-out all;
+  cursor: pointer;
 }
 .entryBullet {
   margin-right: 10px;
 }
 .entryTitle {
-  width: 100%;
-  margin-left: 0px;
   font-weight: 400;
   font-size: 14px;
+  font-family: "Lato", sans-serif;
+  width: 100%;
+  margin-left: 0px;
 }
