--- a/src/client/components/Footer/index.css
+++ b/src/client/components/Footer/index.css
@@ -6,9 +6,9 @@ Footer Containers/CSS
   font-weight: 400;
   font-size: 14px;
   font-family: "Lato", sans-serif;
-  width: 100%;
+  width: calc(100% - 40px);
   color: #fff;
   background: #222;
   text-align: center;
-  padding: 30px 0px;
+  padding: 30px 20px;
 }
