--- a/src/client/components/SnapStatus/index.css
+++ b/src/client/components/SnapStatus/index.css
@@ -2,14 +2,14 @@
 SnapStatus Containers/CSS
 */
 
-.snapStatusContainer {
+.snapStatus {
   margin-top: 5px;
   width: 100%;
   display: flex;
   justify-content: center;
   text-align: center;
 }
-.snapStatusContainerInner {
+.snapStatusTitle {
   font-weight: 400;
   font-size: 14px;
   font-family: "Lato", sans-serif;
