--- a/src/client/components/MainImage/index.css
+++ b/src/client/components/MainImage/index.css
@@ -10,14 +10,14 @@ MainImage Containers/CSS
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 .mainImageBackground {
 	width: 100%;
 	height: 650px;
 	background-color: #000;
-	background-image: url("../../assets/background.jpg");
+	background-image: url("../../assets/background_2.jpg");
 	background-size: cover;
 	background-position: center;
 	display: flex;
