--- a/src/client/components/SnapContainer/index.css
+++ b/src/client/components/SnapContainer/index.css
@@ -6,7 +6,7 @@ SnapContainer Containers/CSS
   width: calc(100% - 40px);
   padding: 50px 20px 60px;
   color: #fff;
-  background-image: url("../../assets/background_2.jpg");
+  background-image: url("../../assets/background.jpg");
   background-size: cover;
   background-position: center;
   display: flex;
@@ -14,12 +14,21 @@ SnapContainer Containers/CSS
   align-items: center;
   justify-content: center;
   text-align: center;
+  position: relative;
+}
+.snapContainerOverlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.55);
+  z-index: 1;
 }
 .snapContainerInner {
   text-align: left;
   max-width: 1024px;
   padding: 30px 0px;
   background-color: rgba(35, 47, 62, 0.5);
+  z-index: 2;
 }
 
 @media only screen and (max-width: 1024px) {
