--- a/src/client/components/SnapContainer/index.css
+++ b/src/client/components/SnapContainer/index.css
@@ -18,6 +18,7 @@ SnapContainer Containers/CSS
 }
 .snapContainerOverlay {
   position: absolute;
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.55);
